<resources>
    <string name="app_name">KS Farm</string>
    <string name="environment">prod</string>
    <string name="prod_server_url">https://syncqount.com</string>
    <string name="dev_server_url">http://192.168.0.138:8080/SyncQountServer</string>
    <string name="scan_qr">Scan QR</string>
    <string name="iot_id">IOT ID</string>
    <string name="ip_address">IP Address</string>
    <string name="last_update">Last update</string>
    <string name="first_floor">ชั้นล่าง</string>
    <string name="second_floor">ระเบียงชั้นสอง</string>
    <string name="temp">อุณหภูมิ</string>
    <string name="humid">ความชื้น</string>
    <string name="pressure">ความกดอากาศ</string>
    <string name="air_con">เครื่องปรับอากาศ</string>
    <string name="light">หลอดไฟ</string>
    <string name="relay" />
    <string name="refresh">Refresh</string>
    <string name="desk_overhead_lamp">ไฟเพดานโต๊ะทำงาน</string>
    <string name="desk_lamp">โคมไฟโต๊ะทำงาน</string>
    <string name="standing_desk_lamp">โคมไฟโต๊ะยืน</string>
    <string name="bed_side_lamp">โคมไฟหัวเตียง</string>
    <string name="bed_room_air_con">แอร์ห้องนอน</string>
    <string name="bed_room">ห้องนอน</string>
    <string name="desk">โต๊ะทำงาน</string>
    <string name="ks_farm_weather_label">สภาพอากาศ</string>
    <string name="hatari_fan">พัดลม Hatari</string>
    <string name="iot">IOT</string>
    <string name="longan_qount">นับต้นลำไย</string>
    <string name="lat_lon">LatLon</string>
    <string name="accuracy">Accuracy</string>
    <string name="zero">0</string>
    <string name="description_string">รายละเอียด</string>
    <string name="title_iot">KS Farm: IOT</string>
    <string name="reset_lap">ล้างข้อมูลรอบนี้</string>
    <string name="name">Name</string>
    <string name="main">Main</string>
    <string name="title_longan_qount_label">นับต้นลำไยออกดอก 2566</string>
    <string name="title_longan_total_weight">น้ำหนักรวม (กก.)</string>
    <string name="title_longan_total_sell">ยอดขายรวม (บาท)</string>
    <string name="title_longan_total_flower">จำนวนต้นออกดอก</string>
    <string name="iot_label">อุปกรณ์ IOT</string>
    <string name="off">Off</string>
    <string name="fertilizerMenuText">ตรวจดิน</string>
    <string name="npk">NPK</string>
    <string name="fertilizer_screen_header">วัดค่าปุ๋ยในดิน</string>
    <string name="reset">Reset</string>
    <string name="sensor_status">Sensor Status</string>
    <string name="sensor_on_line">Sensor OnLine</string>
    <string name="sensor_off_line">Sensor OffLine!!!</string>
    <string name="npk_sensor_ip">192.168.4.1</string>
    <string name="fertilizer_need_label">ปุ๋ยที่ต้องการ (mg/kg)</string>
    <string name="fertilizer_npk_add_label">ปุ่ยที่ต้องใส่เพิ่ม (mg/kg)</string>
    <string name="fertilizer_add_label">ปุ่ยที่ต้องใส่เพิ่ม (กรัม)</string>
    <string name="fertilizer_instruction">การใส่ปุ๋ย</string>
    <string name="qode">Qode</string>
    <string name="qode_info">Qode info</string>
    <string name="papaya">มะละกอ</string>
</resources>